package com.patterns.behavioral.observer;

public interface Observer {
    void update(String news);
}
