package com.patterns.behavioral.strategy;

public interface PaymentStrategy {
    void pay(int amount);
}
