package com.patterns.creational.factory;

public interface Transport {
    void deliver();
}
