package com.patterns.structural.decorator;

public interface Beverage {
    String getDescription();
    double cost();
}
